# info-aggregator

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml
docs/specs/: 2026-06-25-info-aggregator-design.md  2026-06-25-info-aggregator-plan.md
src/info_aggregator/: __init__.py  budget.py  cli.py  config.py  debug_output.py  gap_detector.py  mcp_server.py  models.py  pipeline.py  server.py
src/info_aggregator/sources/: __init__.py  exa.py  firecrawl_cloud.py  firecrawl_local.py  searxng.py  tavily.py
