[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "info-aggregator"
version = "0.1.0"
description = "Multi-source information aggregation tool - break out of your filter bubble"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "mcp>=1.0",
]

[project.scripts]
cc-search = "info_aggregator.cli:main"
cc-search-serve = "info_aggregator.cli:serve"
cc-search-mcp = "info_aggregator.cli:mcp"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
